[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Fonts/GROBOLD.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sandboxes/Test Menus/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 2 )

[node name="MenuMargins" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 838.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 838.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 838.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="Normal Difficulty" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 28.0
margin_right = 838.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions/Normal Difficulty"]
margin_left = -9.43872
margin_right = 838.561
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Normal Difficulty"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard Difficulty" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 153.0
margin_right = 838.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 3 )

[node name="Hard" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions/Hard Difficulty"]
margin_left = -26.551
margin_top = -16.0
margin_right = 744.449
margin_bottom = 125.0
custom_fonts/font = SubResource( 4 )
text = "Hard Difficulty"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 278.0
margin_right = 838.0
margin_bottom = 378.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions/Options"]
margin_left = -1.88776
margin_right = 374.112
margin_bottom = 97.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 403.0
margin_right = 838.0
margin_bottom = 503.0
custom_fonts/font = SubResource( 8 )
text = "Quit"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions/Quit"]
margin_right = 688.0
margin_bottom = 92.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 604.0
margin_right = 838.0
margin_bottom = 707.0
custom_fonts/font = SubResource( 6 )
text = "Version 1.0
"

[node name="Authors" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 711.0
margin_right = 838.0
margin_bottom = 920.0
custom_fonts/font = SubResource( 7 )
text = "Made By:
Piscythe
Mr. Robespierre
and Dinjerad"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 842.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ImageOnRight" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 387.0
margin_top = 428.0
margin_right = 451.0
margin_bottom = 492.0
texture = ExtResource( 1 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Normal Difficulty/Button" to="." method="_on_EasyDifficulty_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Hard Difficulty/Hard" to="." method="_on_HardDifficulty_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Options/Button" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Quit/Button" to="." method="_on_Quit_pressed"]
